# stoch-proc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  temp.py
.github/workflows/: python-package.yml
docs/: conf.py
examples/: hare-munchers.ipynb  lorenz.ipynb  nutria.ipynb
stochproc/: __init__.py  container.py  path.py  state.py  stochastic_process.py  typing.py  utils.py
stochproc/backends/: __init__.py  backend.py  jax.py  torch.py  typing.py
stochproc/distributions/: __init__.py  base.py  exponentials.py  joint.py  module.py  parameter.py  prior.py  prior_module.py  sinh_arcsinh.py  utils.py
stochproc/jax/: __init__.py
stochproc/timeseries/: __init__.py  affine.py  chained.py  chol_affine.py  diffusion.py  hierarchal.py  hierarchical.py  hmm.py  joint.py  linear.py  linear_ssm.py  mv_affine.py  observable.py  result.py  ssm.py  state.py  stochastic_process.py  typing.py  utils.py
stochproc/torch/: container.py  typing.py
test/: test_container.py
test/distributions/: joint.py  prior.py  sinharcsinh.py  test_joint.py
test/timeseries/: affine.py  custom.py  diffusion.py  joint.py  linear.py  ssm.py  stochastic_process.py  test_custom.py  test_ssm.py
tests/: test_state.py
tests/distributions/: test_exponentials.py  test_joint.py  test_module.py  test_prior.py  test_sinharcsinh.py
tests/jax/: test_process.py
tests/pyro/: linear.py  test_linear.py
tests/pyro_integration/: test_linear.py
tests/timeseries/: test_affine.py  test_cholesky.py  test_custom.py  test_diffusion.py  test_hierarchal.py  (+7 more)
(+43 files in other folders)
